--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ pandas
 matplotlib
 # pandas-highcharts # this library not maintained
 # python-highcharts # official release has highchart version conflict
+# also this problem https://github.community/t/slidy-javascript-doesnt-work-on-github-pages/10301
 git+https://github.com/kennybui-data-ai/python-highcharts#egg=python-highcharts
 
 # jupyter
