remove count filter. clean repo

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ requests
 praw
 pandas
 matplotlib
+altair
+vega_datasets
 # pandas-highcharts # this library not maintained
 # python-highcharts # official release has highchart version conflict
 # also this problem https://github.community/t/slidy-javascript-doesnt-work-on-github-pages/10301
